--- a/willigetthemoutofbed/Views/Home/Index.cshtml
+++ b/willigetthemoutofbed/Views/Home/Index.cshtml
@@ -4,3 +4,9 @@
 }
 
 <h2>Index</h2>
+
+
+<form action="." method="POST">
+    <input type="text" name="city" id="city" />
+    <input type="submit" value="What's the fucking time?" />
+</form>
