--- a/willigetthemoutofbed/Views/Shared/_Layout.cshtml
+++ b/willigetthemoutofbed/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>@ViewBag.Title</title>
+    <link href="@Url.Content("~/Content/themes/base/jquery.ui.all.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery-1.6.2.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery-ui-1.8.16.custom.min.js")" type="text/javascript"></script>
