--- a/willigetthemoutofbed/Views/Home/Index.cshtml
+++ b/willigetthemoutofbed/Views/Home/Index.cshtml
@@ -2,9 +2,9 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Index</h2>
-
+<p>
+Enter their timezone (if you don't know it, try the nearest major city), select the timezone and hit go.
+</p>
 
 <form action="." method="POST">
     <input type="text" name="city" id="city" />
