--- a/willigetthemoutofbed/Views/Shared/_Layout.cshtml
+++ b/willigetthemoutofbed/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/themes/base/jquery.ui.all.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.3.0/bootstrap.min.css">
     <script src="@Url.Content("~/Scripts/jquery-1.6.2.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery-ui-1.8.16.custom.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
@@ -13,6 +14,28 @@
 </head>
 
 <body>
-    @RenderBody()
+
+    <div class="container">
+
+      <div class="content">
+        <div class="page-header">
+          <h1>Will I get them out of bed? <br /><small>For those of us that don't understand timezones</small></h1>
+        </div>
+        <div class="row">
+          <div class="span10">
+            <h2>@RenderBody()</h2>
+          </div>
+        </div>
+      </div>
+
+      <footer>
+        <p>Made by <a href="http://twitter.com/tomwardill">@@tomwardill</a> and <a href="http://twitter.com/VIPickering">@@VIPickering</a> of <a href="http://www.welovetheweb.com">welovetheweb</a></p>
+      </footer>
+
+    </div> <!-- /container -->
+
+
+
+    
 </body>
 </html>
