--- a/willigetthemoutofbed/Views/Shared/_Layout.cshtml
+++ b/willigetthemoutofbed/Views/Shared/_Layout.cshtml
@@ -19,7 +19,8 @@
 
       <div class="content">
         <div class="page-header">
-          <h1>Will I get them out of bed? <br /><small>For those of us that don't understand timezones</small></h1>
+          <h1>Will I get them out of bed? </h1>
+          <h3>For those of us that don't understand timezones</h3>
         </div>
         <div class="row">
           <div class="span10">
