--- a/willigetthemoutofbed/Views/Home/Index.cshtml
+++ b/willigetthemoutofbed/Views/Home/Index.cshtml
@@ -10,3 +10,11 @@ Enter their timezone (if you don't know it, try the nearest major city), select 
     <input type="text" name="city" id="city" />
     <input type="submit" value="What's the fucking time?" />
 </form>
+
+@section header {
+ <div class="page-header">
+<h1>Will I get them out of bed? </h1>
+<h3>For those of us that don't understand timezones</h3>
+</div>
+
+}
