Better wording on the home page

--- a/willigetthemoutofbed/Views/Home/Index.cshtml
+++ b/willigetthemoutofbed/Views/Home/Index.cshtml
@@ -3,12 +3,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <p>
-Enter their timezone (if you don't know it, try the nearest major city), select the timezone and hit go.
+Enter a city that you need to know.
 </p>
 
 <form action="." method="POST">
     <input type="text" name="city" id="city" />
-    <input type="submit" value="What's the fucking time?" />
+    <input type="submit" value="Will I wake them up?" />
 </form>
 
 @section header {
